--- a/br/contact.html
+++ b/br/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contate-nos | Decor Innivate Tech</title>
+  <title>Contate-nos | Decor Innovate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -65,7 +65,7 @@
           Contate-nos
         </h1>
         <p class="text-lg md:text-xl text-slate-300">
-          No Decor Innivate Tech, estamos prontos para ouvir suas perguntas, comentários ou solicitações. Preencha o formulário abaixo e entraremos em contato com você o mais rápido possível.
+          No Decor Innovate Tech, estamos prontos para ouvir suas perguntas, comentários ou solicitações. Preencha o formulário abaixo e entraremos em contato com você o mais rápido possível.
         </p>
       </div>
       <!-- Formulário de Contato -->
@@ -111,7 +111,7 @@
               <img src="files/logo.png" alt="Logo" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © Decor Innivate Tech 2025<span class="text-slate-500"> - </span>Todos os direitos reservados.
+              © Decor Innovate Tech 2025<span class="text-slate-500"> - </span>Todos os direitos reservados.
               <br /><br />
             </div>
             <div class="text-sm text-slate-300">
