--- a/br/privacy.html
+++ b/br/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Política de Privacidade | Decor Innivate Tech</title>
+  <title>Política de Privacidade | Decor Innovate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -65,7 +65,7 @@
           Política de Privacidade
         </h1>
         <p class="text-lg md:text-xl text-slate-300">
-          No Decor Innivate Tech, valorizamos sua privacidade e estamos comprometidos em proteger seus dados pessoais. Esta política de privacidade explica como coletamos, usamos e protegemos as informações de nossos usuários.
+          No Decor Innovate Tech, valorizamos sua privacidade e estamos comprometidos em proteger seus dados pessoais. Esta política de privacidade explica como coletamos, usamos e protegemos as informações de nossos usuários.
         </p>
       </div>
     </section>
@@ -92,7 +92,7 @@
           Uso e Proteção de Dados
         </h2>
         <p>
-          As informações coletadas são utilizadas para processar transações, gerenciar contas e enviar atualizações e notificações importantes. No Decor Innivate Tech, adotamos medidas de segurança de última geração para evitar o acesso não autorizado, a divulgação ou a alteração dos seus dados.
+          As informações coletadas são utilizadas para processar transações, gerenciar contas e enviar atualizações e notificações importantes. No Decor Innovate Tech, adotamos medidas de segurança de última geração para evitar o acesso não autorizado, a divulgação ou a alteração dos seus dados.
         </p>
         <p>
           Todos os dados são armazenados em servidores seguros, e backups são realizados regularmente para garantir a continuidade e confiabilidade do serviço. Somente o pessoal autorizado tem acesso às informações pessoais, e todos os nossos funcionários estão sujeitos a rigorosas obrigações de confidencialidade.
@@ -126,7 +126,7 @@
               <img src="files/logo.png" alt="Logo" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © Decor Innivate Tech 2025<span class="text-slate-500"> - </span>Todos os direitos reservados.
+              © Decor Innovate Tech 2025<span class="text-slate-500"> - </span>Todos os direitos reservados.
               <br /><br />
             </div>
             <div class="text-sm text-slate-300">
