--- a/br/terms.html
+++ b/br/terms.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Termos e Condições | Decor Innivate Tech</title>
+  <title>Termos e Condições | Decor Innovate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -65,7 +65,7 @@
           Termos e Condições
         </h1>
         <p class="text-lg md:text-xl text-slate-300">
-          Bem-vindo ao Decor Innivate Tech. Estes termos e condições descrevem as regras para o uso de nossos serviços e o acesso à nossa plataforma. Ao utilizar nossos serviços, você concorda em cumprir estas condições, que foram estabelecidas para proteger tanto nossos clientes quanto a nossa empresa.
+          Bem-vindo ao Decor Innovate Tech. Estes termos e condições descrevem as regras para o uso de nossos serviços e o acesso à nossa plataforma. Ao utilizar nossos serviços, você concorda em cumprir estas condições, que foram estabelecidas para proteger tanto nossos clientes quanto a nossa empresa.
         </p>
       </div>
     </section>
@@ -77,7 +77,7 @@
           Uso do Serviço
         </h2>
         <p>
-          O acesso e uso da plataforma do Decor Innivate Tech são regidos por estes termos. O usuário compromete-se a utilizar o serviço de forma responsável e de acordo com as leis aplicáveis. É proibido qualquer uso fraudulento ou ações que possam comprometer a integridade do nosso sistema. Nossos serviços foram projetados para melhorar a eficiência operacional e a experiência do cliente; portanto, qualquer abuso ou descumprimento poderá resultar na suspensão imediata da conta.
+          O acesso e uso da plataforma do Decor Innovate Tech são regidos por estes termos. O usuário compromete-se a utilizar o serviço de forma responsável e de acordo com as leis aplicáveis. É proibido qualquer uso fraudulento ou ações que possam comprometer a integridade do nosso sistema. Nossos serviços foram projetados para melhorar a eficiência operacional e a experiência do cliente; portanto, qualquer abuso ou descumprimento poderá resultar na suspensão imediata da conta.
         </p>
         <p>
           Reservamo-nos o direito de modificar ou atualizar estes termos a qualquer momento, notificando os usuários por meio do nosso site ou por e-mail. É responsabilidade do usuário revisar periodicamente estes termos para se manter informado sobre quaisquer alterações.
@@ -92,10 +92,10 @@
           Limitações e Responsabilidade
         </h2>
         <p>
-          O Decor Innivate Tech se empenha em fornecer serviços de alta qualidade; contudo, não garantimos a disponibilidade contínua ou a precisão absoluta das informações fornecidas. A empresa não se responsabiliza por perdas ou danos decorrentes do uso indevido ou de interrupções no serviço. O usuário concorda que o uso do serviço ocorre por sua conta e risco.
+          O Decor Innovate Tech se empenha em fornecer serviços de alta qualidade; contudo, não garantimos a disponibilidade contínua ou a precisão absoluta das informações fornecidas. A empresa não se responsabiliza por perdas ou danos decorrentes do uso indevido ou de interrupções no serviço. O usuário concorda que o uso do serviço ocorre por sua conta e risco.
         </p>
         <p>
-          Em nenhum caso o Decor Innivate Tech será responsável por danos indiretos, incidentais ou consequentes, incluindo, mas não se limitando, à perda de dados ou lucros. As limitações aqui expostas fazem parte integral destes termos e se aplicam na máxima extensão permitida por lei.
+          Em nenhum caso o Decor Innovate Tech será responsável por danos indiretos, incidentais ou consequentes, incluindo, mas não se limitando, à perda de dados ou lucros. As limitações aqui expostas fazem parte integral destes termos e se aplicam na máxima extensão permitida por lei.
         </p>
       </div>
     </section>
@@ -110,7 +110,7 @@
           Estes termos e condições podem ser modificados a qualquer momento, entrando em vigor imediatamente após sua publicação em nosso site. É responsabilidade do usuário revisar esta seção periodicamente para se manter informado sobre quaisquer alterações.
         </p>
         <p>
-          Estes termos serão regidos e interpretados de acordo com as leis do país onde está localizada a sede do Decor Innivate Tech, sem considerar suas disposições sobre conflitos de leis. Qualquer disputa decorrente do uso dos nossos serviços será resolvida por meio de arbitragem ou, se necessário, nas jurisdições competentes.
+          Estes termos serão regidos e interpretados de acordo com as leis do país onde está localizada a sede do Decor Innovate Tech, sem considerar suas disposições sobre conflitos de leis. Qualquer disputa decorrente do uso dos nossos serviços será resolvida por meio de arbitragem ou, se necessário, nas jurisdições competentes.
         </p>
       </div>
     </section>
@@ -126,7 +126,7 @@
               <img src="files/logo.png" alt="Logo" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © Decor Innivate Tech 2025<span class="text-slate-500"> - </span>Todos os direitos reservados.
+              © Decor Innovate Tech 2025<span class="text-slate-500"> - </span>Todos os direitos reservados.
               <br /><br />
             </div>
             <div class="text-sm text-slate-300">
