--- a/es/privacy.html
+++ b/es/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Política de Privacidad | Decor Innivate Tech</title>
+  <title>Política de Privacidad | Decor Innovate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -65,7 +65,7 @@
           Política de Privacidad
         </h1>
         <p class="text-lg md:text-xl text-slate-300">
-          En Decor Innivate Tech, valoramos tu privacidad y estamos comprometidos a proteger tus datos personales. Esta política de privacidad explica cómo recopilamos, usamos y protegemos la información de nuestros usuarios.
+          En Decor Innovate Tech, valoramos tu privacidad y estamos comprometidos a proteger tus datos personales. Esta política de privacidad explica cómo recopilamos, usamos y protegemos la información de nuestros usuarios.
         </p>
       </div>
     </section>
@@ -92,7 +92,7 @@
           Uso y Protección de Datos
         </h2>
         <p>
-          La información recopilada se utiliza para procesar transacciones, gestionar cuentas y enviarte actualizaciones y notificaciones importantes. En Decor Innivate Tech, adoptamos medidas de seguridad de última generación para evitar el acceso no autorizado, la divulgación o la alteración de tus datos.
+          La información recopilada se utiliza para procesar transacciones, gestionar cuentas y enviarte actualizaciones y notificaciones importantes. En Decor Innovate Tech, adoptamos medidas de seguridad de última generación para evitar el acceso no autorizado, la divulgación o la alteración de tus datos.
         </p>
         <p>
           Todos los datos se almacenan en servidores seguros, y se realizan copias de seguridad de forma regular para garantizar la continuidad y fiabilidad del servicio. Solo el personal autorizado tiene acceso a la información personal, y todos nuestros empleados están sujetos a estrictas obligaciones de confidencialidad.
@@ -126,7 +126,7 @@
               <img src="files/logo.png" alt="Logo" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © Decor Innivate Tech 2025<span class="text-slate-500"> - </span>Todos los derechos reservados.
+              © Decor Innovate Tech 2025<span class="text-slate-500"> - </span>Todos los derechos reservados.
               <br /><br />
             </div>
             <div class="text-sm text-slate-300">
