--- a/id/contact.html
+++ b/id/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hubungi Kami | Decor Innivate Tech</title>
+  <title>Hubungi Kami | Decor Innovate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -65,7 +65,7 @@
           Hubungi Kami
         </h1>
         <p class="text-lg md:text-xl text-slate-300">
-          Di Decor Innivate Tech, kami siap mendengar pertanyaan, komentar, atau permintaan Anda. Isi formulir di bawah ini, dan kami akan segera menghubungi Anda.
+          Di Decor Innovate Tech, kami siap mendengar pertanyaan, komentar, atau permintaan Anda. Isi formulir di bawah ini, dan kami akan segera menghubungi Anda.
         </p>
       </div>
       <!-- Contact Form -->
@@ -111,7 +111,7 @@
               <img src="files/logo.png" alt="Logo" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © Decor Innivate Tech 2025<span class="text-slate-500"> - </span>Semua hak dilindungi undang-undang.
+              © Decor Innovate Tech 2025<span class="text-slate-500"> - </span>Semua hak dilindungi undang-undang.
               <br /><br />
             </div>
             <div class="text-sm text-slate-300">
