--- a/id/privacy.html
+++ b/id/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kebijakan Privasi | Decor Innivate Tech</title>
+  <title>Kebijakan Privasi | Decor Innovate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -65,7 +65,7 @@
           Kebijakan Privasi
         </h1>
         <p class="text-lg md:text-xl text-slate-300">
-          Di Decor Innivate Tech, kami menghargai privasi Anda dan berkomitmen untuk melindungi data pribadi Anda. Kebijakan privasi ini menjelaskan bagaimana kami mengumpulkan, menggunakan, dan melindungi informasi pengguna kami.
+          Di Decor Innovate Tech, kami menghargai privasi Anda dan berkomitmen untuk melindungi data pribadi Anda. Kebijakan privasi ini menjelaskan bagaimana kami mengumpulkan, menggunakan, dan melindungi informasi pengguna kami.
         </p>
       </div>
     </section>
@@ -92,7 +92,7 @@
           Penggunaan dan Perlindungan Data
         </h2>
         <p>
-          Informasi yang dikumpulkan digunakan untuk memproses transaksi, mengelola akun, dan mengirimkan pembaruan serta notifikasi penting kepada Anda. Di Decor Innivate Tech, kami menerapkan langkah-langkah keamanan mutakhir untuk mencegah akses, pengungkapan, atau perubahan data Anda yang tidak sah.
+          Informasi yang dikumpulkan digunakan untuk memproses transaksi, mengelola akun, dan mengirimkan pembaruan serta notifikasi penting kepada Anda. Di Decor Innovate Tech, kami menerapkan langkah-langkah keamanan mutakhir untuk mencegah akses, pengungkapan, atau perubahan data Anda yang tidak sah.
         </p>
         <p>
           Semua data disimpan di server yang aman, dan backup secara rutin dilakukan untuk memastikan kontinuitas dan keandalan layanan. Hanya personel yang berwenang yang memiliki akses ke informasi pribadi, dan semua karyawan kami terikat oleh kewajiban kerahasiaan yang ketat.
@@ -126,7 +126,7 @@
               <img src="files/logo.png" alt="Logo" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © Decor Innivate Tech 2025<span class="text-slate-500"> - </span>Semua hak dilindungi undang-undang.
+              © Decor Innovate Tech 2025<span class="text-slate-500"> - </span>Semua hak dilindungi undang-undang.
               <br /><br />
             </div>
             <div class="text-sm text-slate-300">
