--- a/id/terms.html
+++ b/id/terms.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Syarat dan Ketentuan | Decor Innivate Tech</title>
+  <title>Syarat dan Ketentuan | Decor Innovate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -65,7 +65,7 @@
           Syarat dan Ketentuan
         </h1>
         <p class="text-lg md:text-xl text-slate-300">
-          Selamat datang di Decor Innivate Tech. Syarat dan ketentuan ini menguraikan aturan penggunaan layanan kami dan akses ke platform kami. Dengan menggunakan layanan kami, Anda setuju untuk mematuhi ketentuan-ketentuan ini, yang dirancang untuk melindungi baik klien kami maupun kami.
+          Selamat datang di Decor Innovate Tech. Syarat dan ketentuan ini menguraikan aturan penggunaan layanan kami dan akses ke platform kami. Dengan menggunakan layanan kami, Anda setuju untuk mematuhi ketentuan-ketentuan ini, yang dirancang untuk melindungi baik klien kami maupun kami.
         </p>
       </div>
     </section>
@@ -77,7 +77,7 @@
           Penggunaan Layanan
         </h2>
         <p>
-          Akses dan penggunaan platform Decor Innivate Tech diatur oleh syarat-syarat ini. Pengguna setuju untuk menggunakan layanan secara bertanggung jawab dan sesuai dengan hukum yang berlaku. Setiap penggunaan curang atau tindakan yang dapat merusak integritas sistem kami dilarang. Layanan kami dirancang untuk meningkatkan efisiensi operasional dan pengalaman pelanggan, sehingga setiap penyalahgunaan atau ketidakpatuhan dapat mengakibatkan penangguhan akun secara langsung.
+          Akses dan penggunaan platform Decor Innovate Tech diatur oleh syarat-syarat ini. Pengguna setuju untuk menggunakan layanan secara bertanggung jawab dan sesuai dengan hukum yang berlaku. Setiap penggunaan curang atau tindakan yang dapat merusak integritas sistem kami dilarang. Layanan kami dirancang untuk meningkatkan efisiensi operasional dan pengalaman pelanggan, sehingga setiap penyalahgunaan atau ketidakpatuhan dapat mengakibatkan penangguhan akun secara langsung.
         </p>
         <p>
           Kami berhak untuk mengubah atau memperbarui syarat-syarat ini kapan saja, dengan memberitahukan pengguna melalui situs web kami atau melalui email. Merupakan tanggung jawab pengguna untuk secara berkala meninjau syarat-syarat ini agar tetap mendapatkan informasi tentang setiap perubahan.
@@ -92,10 +92,10 @@
           Batasan dan Tanggung Jawab
         </h2>
         <p>
-          Decor Innivate Tech berusaha menyediakan layanan berkualitas tinggi; namun, kami tidak menjamin ketersediaan yang berkelanjutan atau keakuratan mutlak dari informasi yang disediakan. Perusahaan tidak akan bertanggung jawab atas kerugian atau kerusakan yang timbul akibat penggunaan yang tidak tepat atau gangguan layanan. Pengguna menerima bahwa penggunaan layanan adalah atas risiko mereka sendiri.
+          Decor Innovate Tech berusaha menyediakan layanan berkualitas tinggi; namun, kami tidak menjamin ketersediaan yang berkelanjutan atau keakuratan mutlak dari informasi yang disediakan. Perusahaan tidak akan bertanggung jawab atas kerugian atau kerusakan yang timbul akibat penggunaan yang tidak tepat atau gangguan layanan. Pengguna menerima bahwa penggunaan layanan adalah atas risiko mereka sendiri.
         </p>
         <p>
-          Dalam keadaan apa pun, Decor Innivate Tech tidak akan bertanggung jawab atas kerusakan tidak langsung, insidental, atau konsekuensial, termasuk namun tidak terbatas pada kehilangan data atau keuntungan yang hilang. Batasan yang dijelaskan di sini merupakan bagian integral dari syarat-syarat ini dan berlaku sejauh yang diizinkan oleh hukum.
+          Dalam keadaan apa pun, Decor Innovate Tech tidak akan bertanggung jawab atas kerusakan tidak langsung, insidental, atau konsekuensial, termasuk namun tidak terbatas pada kehilangan data atau keuntungan yang hilang. Batasan yang dijelaskan di sini merupakan bagian integral dari syarat-syarat ini dan berlaku sejauh yang diizinkan oleh hukum.
         </p>
       </div>
     </section>
@@ -110,7 +110,7 @@
           Syarat dan ketentuan ini dapat dimodifikasi kapan saja, dan akan berlaku segera setelah dipublikasikan di situs web kami. Merupakan tanggung jawab pengguna untuk tetap mendapatkan informasi tentang setiap perubahan dengan secara berkala meninjau bagian ini.
         </p>
         <p>
-          Syarat-syarat ini akan diatur dan ditafsirkan sesuai dengan hukum negara tempat Decor Innivate Tech berkantor pusat, tanpa memperhatikan ketentuan konflik hukumnya. Setiap perselisihan yang timbul dari penggunaan layanan kami akan diselesaikan melalui arbitrase atau, jika perlu, di yurisdiksi yang sesuai.
+          Syarat-syarat ini akan diatur dan ditafsirkan sesuai dengan hukum negara tempat Decor Innovate Tech berkantor pusat, tanpa memperhatikan ketentuan konflik hukumnya. Setiap perselisihan yang timbul dari penggunaan layanan kami akan diselesaikan melalui arbitrase atau, jika perlu, di yurisdiksi yang sesuai.
         </p>
       </div>
     </section>
@@ -126,7 +126,7 @@
               <img src="files/logo.png" alt="Logo" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © Decor Innivate Tech 2025<span class="text-slate-500"> - </span>Semua hak dilindungi undang-undang.
+              © Decor Innovate Tech 2025<span class="text-slate-500"> - </span>Semua hak dilindungi undang-undang.
               <br /><br />
             </div>
             <div class="text-sm text-slate-300">
