--- a/it/contact.html
+++ b/it/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contattaci | Decor Innivate Tech</title>
+  <title>Contattaci | Decor Innovate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -65,7 +65,7 @@
           Contattaci
         </h1>
         <p class="text-lg md:text-xl text-slate-300">
-          In Decor Innivate Tech siamo pronti ad ascoltare le tue domande, commenti o richieste. Compila il modulo sottostante e ti risponderemo al più presto.
+          In Decor Innovate Tech siamo pronti ad ascoltare le tue domande, commenti o richieste. Compila il modulo sottostante e ti risponderemo al più presto.
         </p>
       </div>
       <!-- Contact Form -->
@@ -111,7 +111,7 @@
               <img src="files/logo.png" alt="Logo" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © Decor Innivate Tech 2025<span class="text-slate-500"> - </span>Tutti i diritti riservati.
+              © Decor Innovate Tech 2025<span class="text-slate-500"> - </span>Tutti i diritti riservati.
               <br /><br />
             </div>
             <div class="text-sm text-slate-300">
