--- a/it/privacy.html
+++ b/it/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Informativa sulla privacy | Decor Innivate Tech</title>
+  <title>Informativa sulla privacy | Decor Innovate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -65,7 +65,7 @@
           Informativa sulla privacy
         </h1>
         <p class="text-lg md:text-xl text-slate-300">
-          In Decor Innivate Tech, diamo grande importanza alla tua privacy e ci impegniamo a proteggere i tuoi dati personali. Questa informativa spiega come raccogliamo, utilizziamo e tuteliamo le informazioni dei nostri utenti.
+          In Decor Innovate Tech, diamo grande importanza alla tua privacy e ci impegniamo a proteggere i tuoi dati personali. Questa informativa spiega come raccogliamo, utilizziamo e tuteliamo le informazioni dei nostri utenti.
         </p>
       </div>
     </section>
@@ -92,7 +92,7 @@
           Utilizzo e protezione dei dati
         </h2>
         <p>
-          Le informazioni raccolte vengono utilizzate per elaborare transazioni, gestire gli account e inviarti aggiornamenti e notifiche importanti. In Decor Innivate Tech adottiamo misure di sicurezza all'avanguardia per prevenire accessi non autorizzati, divulgazioni o alterazioni dei tuoi dati.
+          Le informazioni raccolte vengono utilizzate per elaborare transazioni, gestire gli account e inviarti aggiornamenti e notifiche importanti. In Decor Innovate Tech adottiamo misure di sicurezza all'avanguardia per prevenire accessi non autorizzati, divulgazioni o alterazioni dei tuoi dati.
         </p>
         <p>
           Tutti i dati sono archiviati su server sicuri e vengono eseguiti backup regolari per garantire continuità e affidabilità del servizio. Solo il personale autorizzato ha accesso alle informazioni personali e tutti i nostri dipendenti sono vincolati da rigorosi obblighi di riservatezza.
@@ -126,7 +126,7 @@
               <img src="files/logo.png" alt="Logo" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © Decor Innivate Tech 2025<span class="text-slate-500"> - </span>Tutti i diritti riservati.
+              © Decor Innovate Tech 2025<span class="text-slate-500"> - </span>Tutti i diritti riservati.
               <br /><br />
             </div>
             <div class="text-sm text-slate-300">
