--- a/it/terms.html
+++ b/it/terms.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Termini e Condizioni | Decor Innivate Tech</title>
+  <title>Termini e Condizioni | Decor Innovate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -65,7 +65,7 @@
           Termini e Condizioni
         </h1>
         <p class="text-lg md:text-xl text-slate-300">
-          Benvenuto in Decor Innivate Tech. Questi termini e condizioni definiscono le regole per l’utilizzo dei nostri servizi e l’accesso alla nostra piattaforma. Utilizzando i nostri servizi, accetti di rispettare queste condizioni, ideate per proteggere sia i nostri clienti sia la nostra azienda.
+          Benvenuto in Decor Innovate Tech. Questi termini e condizioni definiscono le regole per l’utilizzo dei nostri servizi e l’accesso alla nostra piattaforma. Utilizzando i nostri servizi, accetti di rispettare queste condizioni, ideate per proteggere sia i nostri clienti sia la nostra azienda.
         </p>
       </div>
     </section>
@@ -77,7 +77,7 @@
           Utilizzo del Servizio
         </h2>
         <p>
-          L’accesso e l’utilizzo della piattaforma di Decor Innivate Tech sono regolati da questi termini. L’utente si impegna a utilizzare il servizio in modo responsabile e in conformità con le leggi applicabili. È vietato qualsiasi uso fraudolento o azione che possa compromettere l’integrità del nostro sistema. I nostri servizi sono progettati per migliorare l’efficienza operativa e l’esperienza del cliente; pertanto, ogni abuso o inadempienza potrebbe comportare la sospensione immediata dell’account.
+          L’accesso e l’utilizzo della piattaforma di Decor Innovate Tech sono regolati da questi termini. L’utente si impegna a utilizzare il servizio in modo responsabile e in conformità con le leggi applicabili. È vietato qualsiasi uso fraudolento o azione che possa compromettere l’integrità del nostro sistema. I nostri servizi sono progettati per migliorare l’efficienza operativa e l’esperienza del cliente; pertanto, ogni abuso o inadempienza potrebbe comportare la sospensione immediata dell’account.
         </p>
         <p>
           Ci riserviamo il diritto di modificare o aggiornare questi termini in qualsiasi momento, comunicando le modifiche agli utenti tramite il nostro sito web o via email. È responsabilità dell’utente rivedere periodicamente questi termini per rimanere informato su eventuali cambiamenti.
@@ -92,10 +92,10 @@
           Limitazioni e Responsabilità
         </h2>
         <p>
-          Decor Innivate Tech si impegna a fornire servizi di alta qualità; tuttavia, non garantiamo la disponibilità continua o l’accuratezza assoluta delle informazioni fornite. L’azienda non sarà responsabile per perdite o danni derivanti da un uso improprio o da interruzioni del servizio. Gli utenti accettano che l’utilizzo del servizio avvenga a proprio rischio.
+          Decor Innovate Tech si impegna a fornire servizi di alta qualità; tuttavia, non garantiamo la disponibilità continua o l’accuratezza assoluta delle informazioni fornite. L’azienda non sarà responsabile per perdite o danni derivanti da un uso improprio o da interruzioni del servizio. Gli utenti accettano che l’utilizzo del servizio avvenga a proprio rischio.
         </p>
         <p>
-          In nessun caso Decor Innivate Tech sarà responsabile per danni indiretti, incidentali o consequenziali, inclusa, ma non limitata a, la perdita di dati o profitti mancati. Le limitazioni qui descritte costituiscono parte integrante di questi termini e si applicano nella misura massima consentita dalla legge.
+          In nessun caso Decor Innovate Tech sarà responsabile per danni indiretti, incidentali o consequenziali, inclusa, ma non limitata a, la perdita di dati o profitti mancati. Le limitazioni qui descritte costituiscono parte integrante di questi termini e si applicano nella misura massima consentita dalla legge.
         </p>
       </div>
     </section>
@@ -110,7 +110,7 @@
           Questi termini e condizioni possono essere modificati in qualsiasi momento, diventando efficaci immediatamente dopo la loro pubblicazione sul nostro sito web. È responsabilità dell’utente rimanere informato sulle modifiche esaminando periodicamente questa sezione.
         </p>
         <p>
-          Questi termini saranno regolati e interpretati in conformità con le leggi del paese in cui Decor Innivate Tech ha sede, senza considerare i conflitti di legge. Qualsiasi controversia derivante dall’utilizzo dei nostri servizi sarà risolta tramite arbitrato o, se necessario, nelle giurisdizioni competenti.
+          Questi termini saranno regolati e interpretati in conformità con le leggi del paese in cui Decor Innovate Tech ha sede, senza considerare i conflitti di legge. Qualsiasi controversia derivante dall’utilizzo dei nostri servizi sarà risolta tramite arbitrato o, se necessario, nelle giurisdizioni competenti.
         </p>
       </div>
     </section>
@@ -126,7 +126,7 @@
               <img src="files/logo.png" alt="Logo" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © Decor Innivate Tech 2025<span class="text-slate-500"> - </span>Tutti i diritti riservati.
+              © Decor Innovate Tech 2025<span class="text-slate-500"> - </span>Tutti i diritti riservati.
               <br /><br />
             </div>
             <div class="text-sm text-slate-300">
