--- a/nl/about.html
+++ b/nl/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Over Ons | Decor Innivate Tech</title>
+  <title>Over Ons | Decor Innovate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -61,16 +61,16 @@
     <section class="max-w-6xl mx-auto px-4 sm:px-6 py-12">
       <div class="text-center">
         <h1 class="text-4xl md:text-5xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-slate-200/70 to-slate-100/70 pb-4">
-          Over Decor Innivate Tech
+          Over Decor Innovate Tech
         </h1>
         <p>
-          Bij Decor Innivate Tech staan we aan de voorhoede van technologische en financiële innovatie, toegewijd aan het hervormen van het bedrijfslandschap in de snel evoluerende digitale wereld van vandaag. We zijn niet zomaar een bedrijf; we zijn een katalysator voor vooruitgang, die bedrijven in staat stelt niet alleen te navigeren, maar te floreren in de complexiteit van de moderne markt. Onze expertise ligt in het creëren van op maat gemaakte, baanbrekende oplossingen die technologie en financiën naadloos integreren, en zo een stevige basis bieden voor duurzame groei en ongeëvenaarde efficiëntie.
+          Bij Decor Innovate Tech staan we aan de voorhoede van technologische en financiële innovatie, toegewijd aan het hervormen van het bedrijfslandschap in de snel evoluerende digitale wereld van vandaag. We zijn niet zomaar een bedrijf; we zijn een katalysator voor vooruitgang, die bedrijven in staat stelt niet alleen te navigeren, maar te floreren in de complexiteit van de moderne markt. Onze expertise ligt in het creëren van op maat gemaakte, baanbrekende oplossingen die technologie en financiën naadloos integreren, en zo een stevige basis bieden voor duurzame groei en ongeëvenaarde efficiëntie.
           <br /><br />
-          Decor Innivate Tech is ontstaan uit een visie om de ingewikkelde relatie tussen technologie en financiën te ontrafelen, en geavanceerde tools toegankelijk en impactvol te maken voor bedrijven van elke omvang. We begrijpen de uitdagingen waarmee bedrijven worden geconfronteerd bij het bijhouden van technologische ontwikkelingen, terwijl ze hun financiële operaties effectief beheren. Daarom hebben we het onze missie gemaakt om deze kloof te overbruggen, door geïntegreerde oplossingen te bieden die zowel krachtig als gebruiksvriendelijk zijn.
+          Decor Innovate Tech is ontstaan uit een visie om de ingewikkelde relatie tussen technologie en financiën te ontrafelen, en geavanceerde tools toegankelijk en impactvol te maken voor bedrijven van elke omvang. We begrijpen de uitdagingen waarmee bedrijven worden geconfronteerd bij het bijhouden van technologische ontwikkelingen, terwijl ze hun financiële operaties effectief beheren. Daarom hebben we het onze missie gemaakt om deze kloof te overbruggen, door geïntegreerde oplossingen te bieden die zowel krachtig als gebruiksvriendelijk zijn.
           <br /><br />
           Onze toewijding aan innovatie is onwankelbaar. We investeren voortdurend in onderzoek en ontwikkeling, en verkennen de grenzen van technologie om u oplossingen te bieden die niet alleen actueel zijn, maar toekomstbestendig. Van door AI aangedreven analyses tot blockchain-beveiligde transacties, benutten wij de meest geavanceerde technologieën om onze klanten een concurrentievoordeel te verschaffen. Wij geloven dat technologie een facilitator moet zijn, een krachtvermenigvuldiger die het menselijk potentieel versterkt en het bedrijfsucces stimuleert.
           <br /><br />
-          Maar onze inzet reikt verder dan alleen technologie. Wij investeren diep in het begrijpen van de unieke financiële behoeften van elk bedrijf waarmee we samenwerken. Onze financiële oplossingen zijn ontworpen om aanpasbaar en schaalbaar te zijn, zodat ze voldoen aan de specifieke eisen van diverse industrieën en bedrijfsmodellen. Wij geloven in het opbouwen van langdurige partnerschappen, waarbij we nauw samenwerken met onze klanten om hun doelen en uitdagingen te begrijpen en op maat gemaakte strategieën te bieden die tastbare resultaten opleveren. Decor Innivate Tech is meer dan een dienstverlener; wij zijn uw strategische partner op de weg naar digitale transformatie en financiële voorspoed.
+          Maar onze inzet reikt verder dan alleen technologie. Wij investeren diep in het begrijpen van de unieke financiële behoeften van elk bedrijf waarmee we samenwerken. Onze financiële oplossingen zijn ontworpen om aanpasbaar en schaalbaar te zijn, zodat ze voldoen aan de specifieke eisen van diverse industrieën en bedrijfsmodellen. Wij geloven in het opbouwen van langdurige partnerschappen, waarbij we nauw samenwerken met onze klanten om hun doelen en uitdagingen te begrijpen en op maat gemaakte strategieën te bieden die tastbare resultaten opleveren. Decor Innovate Tech is meer dan een dienstverlener; wij zijn uw strategische partner op de weg naar digitale transformatie en financiële voorspoed.
         </p>
       </div>
     </section>
@@ -83,7 +83,7 @@
         <p>
           Onze passie voor innovatie heeft ons gedreven om consequent geïntegreerde platforms te ontwikkelen en verfijnen die niet zomaar hulpmiddelen zijn, maar strategische activa voor onze klanten. We begrijpen dat effectieve communicatie de levensader is van elk succesvol bedrijf, en daarom faciliteren onze platforms naadloze directe communicatie, wat sterkere klantrelaties bevordert en een snelle respons op marktdynamiek mogelijk maakt. Bovendien pleiten we voor de kracht van automatisering om bedrijven te bevrijden van alledaagse, repetitieve taken, zodat zij zich kunnen concentreren op strategische initiatieven en kerncompetenties.
           <br /><br />
-          Elke uitdaging die we hebben ondervonden, hebben we gezien als een onschatbare kans om te leren en te evolueren. De dynamische aard van de technologie- en financiële sectoren vereist constante aanpassing, en Decor Innivate Tech staat hier altijd aan de voorhoede van. Wij passen ons proactief aan de steeds veranderende behoeften van de markt aan, zodat onze oplossingen relevant, effectief en vooruitstrevend blijven. Met een vastberaden, toekomstgerichte visie investeert Decor Innivate Tech continu zwaar in onderzoek en ontwikkeling, en verlegt daarmee de grenzen van wat mogelijk is om schaalbare en op maat gemaakte oplossingen te bieden die voldoen aan de steeds veranderende eisen van de moderne zakenwereld.
+          Elke uitdaging die we hebben ondervonden, hebben we gezien als een onschatbare kans om te leren en te evolueren. De dynamische aard van de technologie- en financiële sectoren vereist constante aanpassing, en Decor Innovate Tech staat hier altijd aan de voorhoede van. Wij passen ons proactief aan de steeds veranderende behoeften van de markt aan, zodat onze oplossingen relevant, effectief en vooruitstrevend blijven. Met een vastberaden, toekomstgerichte visie investeert Decor Innovate Tech continu zwaar in onderzoek en ontwikkeling, en verlegt daarmee de grenzen van wat mogelijk is om schaalbare en op maat gemaakte oplossingen te bieden die voldoen aan de steeds veranderende eisen van de moderne zakenwereld.
         </p>
       </div>
     </section>
@@ -94,11 +94,11 @@
           Missie en Waarden
         </h2>
         <p>
-          In het hart van Decor Innivate Tech ligt een fundamenteel geloof: technologie, in zijn krachtigste vorm, zou de mensheid moeten dienen en bedrijven op een positieve en betekenisvolle manier vooruitstuwen. Onze missie is niet slechts het bieden van oplossingen die processen optimaliseren; het is het creëren van een kettingreactie van positieve verandering, die een blijvende impact heeft op zowel de gemeenschap die we bedienen als op het milieu dat we delen. We worden gedreven door een diep gevoel van doelgerichtheid, en streven ernaar technologie te creëren die niet alleen efficiënt is, maar ook ethisch verantwoord en maatschappelijk verantwoord.
+          In het hart van Decor Innovate Tech ligt een fundamenteel geloof: technologie, in zijn krachtigste vorm, zou de mensheid moeten dienen en bedrijven op een positieve en betekenisvolle manier vooruitstuwen. Onze missie is niet slechts het bieden van oplossingen die processen optimaliseren; het is het creëren van een kettingreactie van positieve verandering, die een blijvende impact heeft op zowel de gemeenschap die we bedienen als op het milieu dat we delen. We worden gedreven door een diep gevoel van doelgerichtheid, en streven ernaar technologie te creëren die niet alleen efficiënt is, maar ook ethisch verantwoord en maatschappelijk verantwoord.
           <br /><br />
           Wij opereren met onwankelbare integriteit, omarmen transparantie in al onze transacties, en kanaliseren onze passie in elk project dat we ondernemen. Onze toewijding aan excellentie is niet zomaar een modewoord; het zit in ons DNA. We streven onvermoeibaar naar de hoogste normen, en duwen onszelf constant om de verwachtingen van onze klanten bij elke opdracht te overtreffen. Wij geloven in het opbouwen van vertrouwen door consistente prestaties, duidelijke communicatie en een oprechte toewijding aan het succes van de klant.
           <br /><br />
-          Onze kernwaarden vormen de basis van Decor Innivate Tech en sturen elke beslissing en actie die we ondernemen:
+          Onze kernwaarden vormen de basis van Decor Innovate Tech en sturen elke beslissing en actie die we ondernemen:
           <br /><br />
           * <strong>Innovatie:</strong> We zijn onvermoeibaar in onze zoektocht naar baanbrekende oplossingen, en verkennen voortdurend nieuwe technologieën en methodologieën om de grenzen van het mogelijke te verleggen. We koesteren een cultuur van creativiteit en experimentatie, en moedigen ons team aan om buiten de gebaande paden te denken en conventionele benaderingen uit te dagen.
           <br /><br />
@@ -108,7 +108,7 @@
           <br /><br />
           * <strong>Maatschappelijke Verantwoordelijkheid:</strong> Wij geloven in het gebruik van technologie als een kracht voor het goede, en zoeken actief naar kansen om positief bij te dragen aan de samenleving en onze ecologische voetafdruk te verkleinen. We zijn toegewijd aan ethische zakelijke praktijken en streven naar een duurzamere en inclusievere toekomst.
           <br /><br />
-          We zijn enorm trots op de samenwerking met bedrijven die onze visie delen, organisaties die niet alleen door winst worden gedreven, maar ook door de wens om een betere toekomst voor iedereen op te bouwen. Vertrouwen en veiligheid vormen de hoekstenen van onze klantrelaties, en we werken onvermoeibaar om dat vertrouwen elke dag te verdienen en te behouden. Intern cultiveren we een inclusieve en dynamische werkomgeving waar elk teamlid zich gewaardeerd, gerespecteerd en bevoegd voelt om het beste van zichzelf te geven. Bij Decor Innivate Tech bouwen we niet alleen technologie; we bouwen duurzame partnerschappen en vormen samen een betere toekomst.
+          We zijn enorm trots op de samenwerking met bedrijven die onze visie delen, organisaties die niet alleen door winst worden gedreven, maar ook door de wens om een betere toekomst voor iedereen op te bouwen. Vertrouwen en veiligheid vormen de hoekstenen van onze klantrelaties, en we werken onvermoeibaar om dat vertrouwen elke dag te verdienen en te behouden. Intern cultiveren we een inclusieve en dynamische werkomgeving waar elk teamlid zich gewaardeerd, gerespecteerd en bevoegd voelt om het beste van zichzelf te geven. Bij Decor Innovate Tech bouwen we niet alleen technologie; we bouwen duurzame partnerschappen en vormen samen een betere toekomst.
         </p>
       </div>
     </section>
@@ -124,7 +124,7 @@
               <img src="files/logo.png" alt="Logo" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © Decor Innivate Tech 2025<span class="text-slate-500"> - </span>Alle rechten voorbehouden.
+              © Decor Innovate Tech 2025<span class="text-slate-500"> - </span>Alle rechten voorbehouden.
               <br /><br />
             </div>
             <div class="text-sm text-slate-300">
