--- a/nl/terms.html
+++ b/nl/terms.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Voorwaarden | Decor Innivate Tech</title>
+  <title>Voorwaarden | Decor Innovate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -65,7 +65,7 @@
           Voorwaarden
         </h1>
         <p class="text-lg md:text-xl text-slate-300">
-          Welkom bij Decor Innivate Tech. Deze voorwaarden schetsen de regels voor het gebruik van onze diensten en het benaderen van ons platform. Door gebruik te maken van onze diensten gaat u akkoord met deze voorwaarden, die zijn ontworpen ter bescherming van zowel onze klanten als onszelf.
+          Welkom bij Decor Innovate Tech. Deze voorwaarden schetsen de regels voor het gebruik van onze diensten en het benaderen van ons platform. Door gebruik te maken van onze diensten gaat u akkoord met deze voorwaarden, die zijn ontworpen ter bescherming van zowel onze klanten als onszelf.
         </p>
       </div>
     </section>
@@ -77,7 +77,7 @@
           Gebruik van de Dienst
         </h2>
         <p>
-          Toegang tot en gebruik van het Decor Innivate Tech-platform wordt beheerst door deze voorwaarden. De gebruiker gaat ermee akkoord de dienst verantwoordelijk te gebruiken en in overeenstemming met de toepasselijke wetten. Frauduleus gebruik of handelingen die de integriteit van ons systeem kunnen schaden, zijn verboden. Onze diensten zijn ontworpen om de operationele efficiëntie en klantervaring te verbeteren, dus elk misbruik of niet-naleving kan resulteren in onmiddellijke schorsing van het account.
+          Toegang tot en gebruik van het Decor Innovate Tech-platform wordt beheerst door deze voorwaarden. De gebruiker gaat ermee akkoord de dienst verantwoordelijk te gebruiken en in overeenstemming met de toepasselijke wetten. Frauduleus gebruik of handelingen die de integriteit van ons systeem kunnen schaden, zijn verboden. Onze diensten zijn ontworpen om de operationele efficiëntie en klantervaring te verbeteren, dus elk misbruik of niet-naleving kan resulteren in onmiddellijke schorsing van het account.
         </p>
         <p>
           Wij behouden ons het recht voor deze voorwaarden te allen tijde te wijzigen of bij te werken, waarbij gebruikers via onze website of per e-mail op de hoogte worden gebracht. Het is de verantwoordelijkheid van de gebruiker om deze voorwaarden periodiek te raadplegen.
@@ -92,10 +92,10 @@
           Beperkingen en Aansprakelijkheid
         </h2>
         <p>
-          Decor Innivate Tech streeft ernaar hoogwaardige diensten te leveren; echter, wij garanderen niet de continue beschikbaarheid of absolute nauwkeurigheid van de verstrekte informatie. Het bedrijf is niet aansprakelijk voor verliezen of schade die voortvloeien uit onjuist gebruik of onderbreking van de dienst. Gebruikers accepteren dat het gebruik van de dienst op eigen risico is.
+          Decor Innovate Tech streeft ernaar hoogwaardige diensten te leveren; echter, wij garanderen niet de continue beschikbaarheid of absolute nauwkeurigheid van de verstrekte informatie. Het bedrijf is niet aansprakelijk voor verliezen of schade die voortvloeien uit onjuist gebruik of onderbreking van de dienst. Gebruikers accepteren dat het gebruik van de dienst op eigen risico is.
         </p>
         <p>
-          In geen geval is Decor Innivate Tech aansprakelijk voor indirecte, incidentele of gevolgschade, inclusief maar niet beperkt tot gegevensverlies of gederfde winst. De hier beschreven beperkingen maken integraal onderdeel uit van deze voorwaarden en zijn van toepassing voor zover de wet dit toestaat.
+          In geen geval is Decor Innovate Tech aansprakelijk voor indirecte, incidentele of gevolgschade, inclusief maar niet beperkt tot gegevensverlies of gederfde winst. De hier beschreven beperkingen maken integraal onderdeel uit van deze voorwaarden en zijn van toepassing voor zover de wet dit toestaat.
         </p>
       </div>
     </section>
@@ -110,7 +110,7 @@
           Deze voorwaarden kunnen te allen tijde worden gewijzigd, met onmiddellijke ingang na publicatie op onze website. Het is de verantwoordelijkheid van de gebruiker om op de hoogte te blijven van eventuele wijzigingen door deze sectie periodiek te raadplegen.
         </p>
         <p>
-          Deze voorwaarden worden beheerst door en geïnterpreteerd in overeenstemming met de wetten van het land waar Decor Innivate Tech is gevestigd, zonder rekening te houden met conflicterende wetsbepalingen. Eventuele geschillen die voortvloeien uit het gebruik van onze diensten zullen worden opgelost via arbitrage of, indien nodig, in de bevoegde rechtsgebieden.
+          Deze voorwaarden worden beheerst door en geïnterpreteerd in overeenstemming met de wetten van het land waar Decor Innovate Tech is gevestigd, zonder rekening te houden met conflicterende wetsbepalingen. Eventuele geschillen die voortvloeien uit het gebruik van onze diensten zullen worden opgelost via arbitrage of, indien nodig, in de bevoegde rechtsgebieden.
         </p>
       </div>
     </section>
@@ -126,7 +126,7 @@
               <img src="files/logo.png" alt="Logo" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © Decor Innivate Tech 2025<span class="text-slate-500"> - </span>Alle rechten voorbehouden.
+              © Decor Innovate Tech 2025<span class="text-slate-500"> - </span>Alle rechten voorbehouden.
               <br /><br />
             </div>
             <div class="text-sm text-slate-300">
