--- a/es/about.html
+++ b/es/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sobre Nosotros | Decor Innivate Tech</title>
+  <title>Sobre Nosotros | Decor Innovate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -61,16 +61,16 @@
     <section class="max-w-6xl mx-auto px-4 sm:px-6 py-12">
       <div class="text-center">
         <h1 class="text-4xl md:text-5xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-slate-200/70 to-slate-100/70 pb-4">
-          Sobre Decor Innivate Tech
+          Sobre Decor Innovate Tech
         </h1>
         <p>
-          En Decor Innivate Tech, estamos a la vanguardia de la innovación tecnológica y financiera, dedicados a transformar el panorama empresarial en el mundo digital actual, que evoluciona rápidamente. No somos solo una empresa; somos un catalizador del progreso, empoderando a las empresas para que no solo naveguen, sino que prosperen en las complejidades del mercado moderno. Nuestra experiencia radica en crear soluciones a medida y de última generación que integran sin fisuras tecnología y finanzas, proporcionando una base sólida para un crecimiento sostenible y una eficiencia sin igual.
+          En Decor Innovate Tech, estamos a la vanguardia de la innovación tecnológica y financiera, dedicados a transformar el panorama empresarial en el mundo digital actual, que evoluciona rápidamente. No somos solo una empresa; somos un catalizador del progreso, empoderando a las empresas para que no solo naveguen, sino que prosperen en las complejidades del mercado moderno. Nuestra experiencia radica en crear soluciones a medida y de última generación que integran sin fisuras tecnología y finanzas, proporcionando una base sólida para un crecimiento sostenible y una eficiencia sin igual.
           <br><br>
-          Decor Innivate Tech nació con la visión de desmitificar la compleja relación entre tecnología y finanzas, haciendo que las herramientas sofisticadas sean accesibles y tengan un impacto para empresas de todos los tamaños. Entendemos los desafíos que enfrentan las empresas al intentar mantenerse al día con los avances tecnológicos mientras gestionan eficazmente sus operaciones financieras. Por ello, hemos hecho de nuestra misión cerrar esta brecha, ofreciendo soluciones integradas que son potentes y fáciles de usar.
+          Decor Innovate Tech nació con la visión de desmitificar la compleja relación entre tecnología y finanzas, haciendo que las herramientas sofisticadas sean accesibles y tengan un impacto para empresas de todos los tamaños. Entendemos los desafíos que enfrentan las empresas al intentar mantenerse al día con los avances tecnológicos mientras gestionan eficazmente sus operaciones financieras. Por ello, hemos hecho de nuestra misión cerrar esta brecha, ofreciendo soluciones integradas que son potentes y fáciles de usar.
           <br><br>
           Nuestro compromiso con la innovación es inquebrantable. Invertimos continuamente en investigación y desarrollo, explorando las fronteras de la tecnología para ofrecer soluciones que no solo sean actuales, sino a prueba de futuro. Desde análisis impulsados por IA hasta transacciones aseguradas mediante blockchain, aprovechamos las tecnologías más avanzadas para crear una ventaja competitiva para nuestros clientes. Creemos que la tecnología debe ser un habilitador, un multiplicador de fuerza que amplifica el potencial humano y impulsa el éxito empresarial.
           <br><br>
-          Pero nuestro compromiso va más allá de la tecnología. Nos dedicamos a comprender las necesidades financieras únicas de cada empresa con la que colaboramos. Nuestras soluciones financieras están diseñadas para ser adaptables y escalables, atendiendo a los requerimientos específicos de diversas industrias y modelos de negocio. Creemos en fomentar asociaciones a largo plazo, trabajando estrechamente con nuestros clientes para entender sus metas y desafíos, y proporcionando estrategias personalizadas que generen resultados tangibles. Decor Innivate Tech es más que un proveedor de servicios; somos tu aliado estratégico en el camino hacia la transformación digital y la prosperidad financiera.
+          Pero nuestro compromiso va más allá de la tecnología. Nos dedicamos a comprender las necesidades financieras únicas de cada empresa con la que colaboramos. Nuestras soluciones financieras están diseñadas para ser adaptables y escalables, atendiendo a los requerimientos específicos de diversas industrias y modelos de negocio. Creemos en fomentar asociaciones a largo plazo, trabajando estrechamente con nuestros clientes para entender sus metas y desafíos, y proporcionando estrategias personalizadas que generen resultados tangibles. Decor Innovate Tech es más que un proveedor de servicios; somos tu aliado estratégico en el camino hacia la transformación digital y la prosperidad financiera.
         </p>
       </div>
     </section>
@@ -83,7 +83,7 @@
         <p>
           Nuestra pasión por la innovación nos ha impulsado a desarrollar y perfeccionar continuamente plataformas integradas que no son solo herramientas, sino activos estratégicos para nuestros clientes. Entendemos que la comunicación efectiva es el alma de cualquier negocio exitoso, por lo que nuestras plataformas facilitan una comunicación directa y sin interrupciones, fortaleciendo las relaciones con los clientes y permitiendo una respuesta rápida a las dinámicas del mercado. Además, apostamos por el poder de la automatización para liberar a las empresas de tareas rutinarias y repetitivas, permitiéndoles concentrarse en iniciativas estratégicas y competencias centrales.
           <br><br>
-          Cada desafío que hemos enfrentado ha sido visto como una oportunidad invaluable para aprender y evolucionar. La naturaleza dinámica de los sectores tecnológico y financiero exige una adaptación constante, y Decor Innivate Tech siempre ha estado a la vanguardia de esta capacidad de respuesta. Nos adaptamos proactivamente a las necesidades cambiantes del mercado, asegurándonos de que nuestras soluciones sigan siendo relevantes, efectivas y estén siempre un paso adelante. Con una visión firme y orientada al futuro, Decor Innivate Tech continúa invirtiendo fuertemente en investigación y desarrollo, superando los límites de lo posible para ofrecer soluciones escalables y personalizadas que satisfagan las demandas del mundo empresarial moderno.
+          Cada desafío que hemos enfrentado ha sido visto como una oportunidad invaluable para aprender y evolucionar. La naturaleza dinámica de los sectores tecnológico y financiero exige una adaptación constante, y Decor Innovate Tech siempre ha estado a la vanguardia de esta capacidad de respuesta. Nos adaptamos proactivamente a las necesidades cambiantes del mercado, asegurándonos de que nuestras soluciones sigan siendo relevantes, efectivas y estén siempre un paso adelante. Con una visión firme y orientada al futuro, Decor Innovate Tech continúa invirtiendo fuertemente en investigación y desarrollo, superando los límites de lo posible para ofrecer soluciones escalables y personalizadas que satisfagan las demandas del mundo empresarial moderno.
         </p>
       </div>
     </section>
@@ -94,11 +94,11 @@
           Misión y Valores
         </h2>
         <p>
-          En el corazón de Decor Innivate Tech reside una creencia fundamental: la tecnología, en su forma más poderosa, debe servir a la humanidad y propulsar a las empresas hacia adelante de manera positiva y significativa. Nuestra misión no es simplemente proporcionar soluciones que optimicen procesos; es crear un efecto dominó de cambio positivo, generando un impacto duradero tanto en la comunidad a la que servimos como en el entorno que compartimos. Nos impulsa un profundo sentido de propósito, esforzándonos por crear tecnología que no solo sea eficiente, sino también ética y socialmente responsable.
+          En el corazón de Decor Innovate Tech reside una creencia fundamental: la tecnología, en su forma más poderosa, debe servir a la humanidad y propulsar a las empresas hacia adelante de manera positiva y significativa. Nuestra misión no es simplemente proporcionar soluciones que optimicen procesos; es crear un efecto dominó de cambio positivo, generando un impacto duradero tanto en la comunidad a la que servimos como en el entorno que compartimos. Nos impulsa un profundo sentido de propósito, esforzándonos por crear tecnología que no solo sea eficiente, sino también ética y socialmente responsable.
           <br><br>
           Operamos con una integridad inquebrantable, abrazando la transparencia en todas nuestras interacciones y canalizando nuestra pasión en cada proyecto que emprendemos. Nuestro compromiso con la excelencia no es solo una palabra de moda corporativa; está arraigado en nuestro ADN. Perseguimos incansablemente los más altos estándares, empujándonos constantemente a superar las expectativas de nuestros clientes en cada compromiso. Creemos en construir confianza a través de un desempeño consistente, comunicación clara y una dedicación genuina al éxito del cliente.
           <br><br>
-          Nuestros valores fundamentales son la base de Decor Innivate Tech, guiando cada decisión y acción que tomamos:
+          Nuestros valores fundamentales son la base de Decor Innovate Tech, guiando cada decisión y acción que tomamos:
           <br><br>
           * **Innovación:** Somos incansables en la búsqueda de soluciones revolucionarias, explorando constantemente nuevas tecnologías y metodologías para ampliar los límites de lo posible. Fomentamos una cultura de creatividad y experimentación, animando a nuestro equipo a pensar de manera innovadora y desafiar los enfoques convencionales.
           <br>
@@ -108,7 +108,7 @@
           <br>
           * **Responsabilidad Social:** Creemos en utilizar la tecnología como una fuerza para el bien, buscando activamente oportunidades para contribuir positivamente a la sociedad y minimizar nuestro impacto ambiental. Estamos comprometidos con prácticas comerciales éticas y trabajamos para crear un futuro más sostenible e inclusivo.
           <br><br>
-          Estamos inmensamente orgullosos de colaborar con empresas que comparten nuestra visión, organizaciones que no solo se impulsan por el beneficio, sino también por el deseo de construir un futuro mejor para todos. La confianza y la seguridad son las piedras angulares de nuestras relaciones con los clientes, y trabajamos incansablemente para ganarlas y mantenerlas cada día. Internamente, cultivamos un ambiente laboral inclusivo y dinámico donde cada miembro del equipo se siente valorado, respetado y empoderado para dar lo mejor de sí. En Decor Innivate Tech, no solo estamos construyendo tecnología; estamos forjando alianzas duraderas y moldeando un mañana mejor, juntos.
+          Estamos inmensamente orgullosos de colaborar con empresas que comparten nuestra visión, organizaciones que no solo se impulsan por el beneficio, sino también por el deseo de construir un futuro mejor para todos. La confianza y la seguridad son las piedras angulares de nuestras relaciones con los clientes, y trabajamos incansablemente para ganarlas y mantenerlas cada día. Internamente, cultivamos un ambiente laboral inclusivo y dinámico donde cada miembro del equipo se siente valorado, respetado y empoderado para dar lo mejor de sí. En Decor Innovate Tech, no solo estamos construyendo tecnología; estamos forjando alianzas duraderas y moldeando un mañana mejor, juntos.
         </p>
       </div>
     </section>
@@ -124,7 +124,7 @@
               <img src="files/logo.png" alt="Logo" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © Decor Innivate Tech 2025<span class="text-slate-500"> - </span>Todos los derechos reservados.
+              © Decor Innovate Tech 2025<span class="text-slate-500"> - </span>Todos los derechos reservados.
               <br /><br />
             </div>
             <div class="text-sm text-slate-300">
