--- a/es/contact.html
+++ b/es/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contáctanos | Decor Innivate Tech</title>
+  <title>Contáctanos | Decor Innovate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -65,7 +65,7 @@
           Contáctanos
         </h1>
         <p class="text-lg md:text-xl text-slate-300">
-          En Decor Innivate Tech, estamos listos para escuchar tus preguntas, comentarios o solicitudes. Completa el siguiente formulario y nos pondremos en contacto contigo lo antes posible.
+          En Decor Innovate Tech, estamos listos para escuchar tus preguntas, comentarios o solicitudes. Completa el siguiente formulario y nos pondremos en contacto contigo lo antes posible.
         </p>
       </div>
       <!-- Formulario de Contacto -->
@@ -111,7 +111,7 @@
               <img src="files/logo.png" alt="Logo" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © Decor Innivate Tech 2025<span class="text-slate-500"> - </span>Todos los derechos reservados.
+              © Decor Innovate Tech 2025<span class="text-slate-500"> - </span>Todos los derechos reservados.
               <br /><br />
             </div>
             <div class="text-sm text-slate-300">
