--- a/id/about.html
+++ b/id/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tentang Kami | Decor Innivate Tech</title>
+  <title>Tentang Kami | Decor Innovate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -61,16 +61,16 @@
     <section class="max-w-6xl mx-auto px-4 sm:px-6 py-12">
       <div class="text-center">
         <h1 class="text-4xl md:text-5xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-slate-200/70 to-slate-100/70 pb-4">
-          Tentang Decor Innivate Tech
+          Tentang Decor Innovate Tech
         </h1>
         <p>
-          Di Decor Innivate Tech, kami berada di garis depan inovasi teknologi dan keuangan, berdedikasi untuk membentuk ulang lanskap bisnis di dunia digital yang berkembang pesat saat ini. Kami bukan sekadar perusahaan; kami adalah katalis kemajuan, memberdayakan bisnis untuk tidak hanya bertahan tetapi juga berkembang dalam kompleksitas pasar modern. Keahlian kami terletak pada pembuatan solusi kustom dan mutakhir yang mengintegrasikan teknologi dan keuangan secara mulus, memberikan fondasi yang kuat untuk pertumbuhan berkelanjutan dan efisiensi yang tak tertandingi.
+          Di Decor Innovate Tech, kami berada di garis depan inovasi teknologi dan keuangan, berdedikasi untuk membentuk ulang lanskap bisnis di dunia digital yang berkembang pesat saat ini. Kami bukan sekadar perusahaan; kami adalah katalis kemajuan, memberdayakan bisnis untuk tidak hanya bertahan tetapi juga berkembang dalam kompleksitas pasar modern. Keahlian kami terletak pada pembuatan solusi kustom dan mutakhir yang mengintegrasikan teknologi dan keuangan secara mulus, memberikan fondasi yang kuat untuk pertumbuhan berkelanjutan dan efisiensi yang tak tertandingi.
           <br /><br />
-          Decor Innivate Tech lahir dari visi untuk mengungkap hubungan rumit antara teknologi dan keuangan, menjadikan alat-alat canggih dapat diakses dan berdampak bagi bisnis dari semua skala. Kami memahami tantangan yang dihadapi bisnis dalam mengikuti perkembangan teknologi sambil mengelola operasi keuangan mereka secara efektif. Itulah sebabnya kami menjadikan misi kami untuk menjembatani kesenjangan ini, dengan menawarkan solusi terintegrasi yang kuat dan mudah digunakan.
+          Decor Innovate Tech lahir dari visi untuk mengungkap hubungan rumit antara teknologi dan keuangan, menjadikan alat-alat canggih dapat diakses dan berdampak bagi bisnis dari semua skala. Kami memahami tantangan yang dihadapi bisnis dalam mengikuti perkembangan teknologi sambil mengelola operasi keuangan mereka secara efektif. Itulah sebabnya kami menjadikan misi kami untuk menjembatani kesenjangan ini, dengan menawarkan solusi terintegrasi yang kuat dan mudah digunakan.
           <br /><br />
           Komitmen kami terhadap inovasi tidak tergoyahkan. Kami terus berinvestasi dalam penelitian dan pengembangan, menjelajahi batas-batas teknologi untuk menghadirkan solusi yang tidak hanya mutakhir, tetapi juga tahan masa depan. Dari analitik berbasis AI hingga transaksi yang diamankan oleh blockchain, kami memanfaatkan teknologi tercanggih untuk menciptakan keunggulan kompetitif bagi klien kami. Kami percaya bahwa teknologi seharusnya menjadi fasilitator, pengganda kekuatan yang memperkuat potensi manusia dan mendorong kesuksesan bisnis.
           <br /><br />
-          Namun komitmen kami tidak hanya terbatas pada teknologi. Kami sangat berinvestasi dalam memahami kebutuhan keuangan unik dari setiap bisnis yang kami ajak bermitra. Solusi keuangan kami dirancang agar dapat beradaptasi dan diskalakan, memenuhi kebutuhan spesifik dari berbagai industri dan model bisnis. Kami percaya dalam membina kemitraan jangka panjang, bekerja sama dengan klien untuk memahami tujuan dan tantangan mereka, serta menyediakan strategi yang disesuaikan yang menghasilkan hasil yang nyata. Decor Innivate Tech lebih dari sekadar penyedia layanan; kami adalah sekutu strategis Anda dalam perjalanan menuju transformasi digital dan kemakmuran keuangan.
+          Namun komitmen kami tidak hanya terbatas pada teknologi. Kami sangat berinvestasi dalam memahami kebutuhan keuangan unik dari setiap bisnis yang kami ajak bermitra. Solusi keuangan kami dirancang agar dapat beradaptasi dan diskalakan, memenuhi kebutuhan spesifik dari berbagai industri dan model bisnis. Kami percaya dalam membina kemitraan jangka panjang, bekerja sama dengan klien untuk memahami tujuan dan tantangan mereka, serta menyediakan strategi yang disesuaikan yang menghasilkan hasil yang nyata. Decor Innovate Tech lebih dari sekadar penyedia layanan; kami adalah sekutu strategis Anda dalam perjalanan menuju transformasi digital dan kemakmuran keuangan.
         </p>
       </div>
     </section>
@@ -83,7 +83,7 @@
         <p>
           Hasrat kami terhadap inovasi telah mendorong kami untuk terus mengembangkan dan menyempurnakan platform terintegrasi yang bukan hanya alat, tetapi juga aset strategis bagi klien kami. Kami memahami bahwa komunikasi yang efektif adalah nadi dari setiap bisnis yang sukses, itulah sebabnya platform kami memfasilitasi komunikasi langsung yang mulus, memperkuat hubungan klien dan memungkinkan respons cepat terhadap dinamika pasar. Selain itu, kami mendukung kekuatan otomasi untuk membebaskan bisnis dari tugas-tugas yang membosankan dan berulang, memungkinkan mereka fokus pada inisiatif strategis dan kompetensi inti.
           <br /><br />
-          Setiap tantangan yang kami hadapi dipandang sebagai kesempatan berharga untuk belajar dan berkembang. Sifat dinamis dari sektor teknologi dan keuangan menuntut adaptasi yang konstan, dan Decor Innivate Tech selalu berada di garis depan responsifitas tersebut. Kami secara proaktif menyesuaikan diri dengan kebutuhan pasar yang terus berubah, memastikan bahwa solusi kami tetap relevan, efektif, dan lebih maju. Dengan visi ke depan yang teguh, Decor Innivate Tech terus berinvestasi besar-besaran dalam penelitian dan pengembangan, mendorong batas-batas kemungkinan untuk menyediakan solusi yang dapat diskalakan dan disesuaikan yang memenuhi tuntutan dunia bisnis modern yang terus berkembang.
+          Setiap tantangan yang kami hadapi dipandang sebagai kesempatan berharga untuk belajar dan berkembang. Sifat dinamis dari sektor teknologi dan keuangan menuntut adaptasi yang konstan, dan Decor Innovate Tech selalu berada di garis depan responsifitas tersebut. Kami secara proaktif menyesuaikan diri dengan kebutuhan pasar yang terus berubah, memastikan bahwa solusi kami tetap relevan, efektif, dan lebih maju. Dengan visi ke depan yang teguh, Decor Innovate Tech terus berinvestasi besar-besaran dalam penelitian dan pengembangan, mendorong batas-batas kemungkinan untuk menyediakan solusi yang dapat diskalakan dan disesuaikan yang memenuhi tuntutan dunia bisnis modern yang terus berkembang.
         </p>
       </div>
     </section>
@@ -94,11 +94,11 @@
           Misi dan Nilai-nilai
         </h2>
         <p>
-          Di jantung Decor Innivate Tech terdapat keyakinan mendasar: teknologi, dalam bentuknya yang paling kuat, seharusnya melayani umat manusia dan mendorong bisnis maju secara positif dan bermakna. Misi kami bukan sekadar menyediakan solusi yang mengoptimalkan proses; melainkan menciptakan efek riak perubahan positif, menghasilkan dampak yang langgeng pada komunitas yang kami layani dan lingkungan yang kita bagi. Kami didorong oleh rasa tujuan yang mendalam, berusaha menciptakan teknologi yang tidak hanya efisien tetapi juga etis dan bertanggung jawab secara sosial.
+          Di jantung Decor Innovate Tech terdapat keyakinan mendasar: teknologi, dalam bentuknya yang paling kuat, seharusnya melayani umat manusia dan mendorong bisnis maju secara positif dan bermakna. Misi kami bukan sekadar menyediakan solusi yang mengoptimalkan proses; melainkan menciptakan efek riak perubahan positif, menghasilkan dampak yang langgeng pada komunitas yang kami layani dan lingkungan yang kita bagi. Kami didorong oleh rasa tujuan yang mendalam, berusaha menciptakan teknologi yang tidak hanya efisien tetapi juga etis dan bertanggung jawab secara sosial.
           <br /><br />
           Kami beroperasi dengan integritas yang tak tergoyahkan, mengedepankan transparansi dalam setiap transaksi, dan menyalurkan semangat kami ke dalam setiap proyek yang kami kerjakan. Komitmen kami terhadap keunggulan bukanlah sekadar slogan korporat; itu tertanam dalam DNA kami. Kami terus menerus mengejar standar tertinggi, mendorong diri kami untuk melampaui ekspektasi klien dalam setiap keterlibatan. Kami percaya dalam membangun kepercayaan melalui kinerja yang konsisten, komunikasi yang jelas, dan dedikasi tulus terhadap kesuksesan klien.
           <br /><br />
-          Nilai-nilai inti kami adalah fondasi dari Decor Innivate Tech, yang memandu setiap keputusan dan tindakan yang kami ambil:
+          Nilai-nilai inti kami adalah fondasi dari Decor Innovate Tech, yang memandu setiap keputusan dan tindakan yang kami ambil:
           <br /><br />
           * <strong>Inovasi:</strong> Kami gigih dalam mengejar solusi yang inovatif, terus mengeksplorasi teknologi dan metodologi baru untuk mendorong batas kemungkinan. Kami membudayakan kreativitas dan eksperimen, mendorong tim kami untuk berpikir di luar kotak dan menantang pendekatan konvensional.
           <br /><br />
@@ -108,7 +108,7 @@
           <br /><br />
           * <strong>Tanggung Jawab Sosial:</strong> Kami percaya bahwa teknologi harus digunakan sebagai kekuatan untuk kebaikan, secara aktif mencari peluang untuk memberikan kontribusi positif kepada masyarakat dan meminimalkan dampak lingkungan kami. Kami berkomitmen pada praktik bisnis yang etis dan berusaha menciptakan masa depan yang lebih berkelanjutan dan inklusif.
           <br /><br />
-          Kami sangat bangga dapat bekerja sama dengan perusahaan yang berbagi visi kami, organisasi yang tidak hanya didorong oleh keuntungan tetapi juga oleh keinginan untuk membangun masa depan yang lebih baik bagi semua. Kepercayaan dan keamanan adalah landasan hubungan klien kami, dan kami bekerja tanpa lelah untuk mendapatkan serta mempertahankannya setiap hari. Secara internal, kami membina lingkungan kerja yang inklusif dan dinamis di mana setiap anggota tim merasa dihargai, dihormati, dan diberdayakan untuk memberikan kontribusi terbaik mereka. Di Decor Innivate Tech, kami tidak hanya membangun teknologi; kami membangun kemitraan yang langgeng dan membentuk masa depan yang lebih baik, bersama-sama.
+          Kami sangat bangga dapat bekerja sama dengan perusahaan yang berbagi visi kami, organisasi yang tidak hanya didorong oleh keuntungan tetapi juga oleh keinginan untuk membangun masa depan yang lebih baik bagi semua. Kepercayaan dan keamanan adalah landasan hubungan klien kami, dan kami bekerja tanpa lelah untuk mendapatkan serta mempertahankannya setiap hari. Secara internal, kami membina lingkungan kerja yang inklusif dan dinamis di mana setiap anggota tim merasa dihargai, dihormati, dan diberdayakan untuk memberikan kontribusi terbaik mereka. Di Decor Innovate Tech, kami tidak hanya membangun teknologi; kami membangun kemitraan yang langgeng dan membentuk masa depan yang lebih baik, bersama-sama.
         </p>
       </div>
     </section>
@@ -124,7 +124,7 @@
               <img src="files/logo.png" alt="Logo" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © Decor Innivate Tech 2025<span class="text-slate-500"> - </span>Semua hak dilindungi undang-undang.
+              © Decor Innovate Tech 2025<span class="text-slate-500"> - </span>Semua hak dilindungi undang-undang.
               <br /> <br />
             </div>
             <div class="text-sm text-slate-300">
