--- a/kr/contact.html
+++ b/kr/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>문의하기 | Decor Innivate Tech</title>
+  <title>문의하기 | Decor Innovate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -65,7 +65,7 @@
           문의하기
         </h1>
         <p class="text-lg md:text-xl text-slate-300">
-          Decor Innivate Tech에서는 여러분의 질문, 의견 또는 요청을 듣고자 합니다. 아래 양식을 작성해 주시면 가능한 한 빨리 회신드리겠습니다.
+          Decor Innovate Tech에서는 여러분의 질문, 의견 또는 요청을 듣고자 합니다. 아래 양식을 작성해 주시면 가능한 한 빨리 회신드리겠습니다.
         </p>
       </div>
       <!-- 문의 양식 -->
@@ -111,7 +111,7 @@
               <img src="files/logo.png" alt="로고" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © Decor Innivate Tech 2025<span class="text-slate-500"> - </span>모든 권리 보유.
+              © Decor Innovate Tech 2025<span class="text-slate-500"> - </span>모든 권리 보유.
               <br /><br />
             </div>
             <div class="text-sm text-slate-300">
