--- a/kr/privacy.html
+++ b/kr/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>개인정보 보호정책 | Decor Innivate Tech</title>
+  <title>개인정보 보호정책 | Decor Innovate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -65,7 +65,7 @@
           개인정보 보호정책
         </h1>
         <p class="text-lg md:text-xl text-slate-300">
-          Decor Innivate Tech는 귀하의 개인정보를 소중하게 여기며 이를 보호하기 위해 최선을 다하고 있습니다. 본 개인정보 보호정책은 당사가 사용자 정보를 어떻게 수집, 이용 및 보호하는지 설명합니다.
+          Decor Innovate Tech는 귀하의 개인정보를 소중하게 여기며 이를 보호하기 위해 최선을 다하고 있습니다. 본 개인정보 보호정책은 당사가 사용자 정보를 어떻게 수집, 이용 및 보호하는지 설명합니다.
         </p>
       </div>
     </section>
@@ -92,7 +92,7 @@
           데이터의 이용 및 보호
         </h2>
         <p>
-          수집된 정보는 거래 처리, 계정 관리, 업데이트 및 중요한 알림 전송 등에 사용됩니다. Decor Innivate Tech는 귀하의 데이터에 대한 무단 접근, 공개 또는 변경을 방지하기 위해 최첨단 보안 조치를 채택하고 있습니다.
+          수집된 정보는 거래 처리, 계정 관리, 업데이트 및 중요한 알림 전송 등에 사용됩니다. Decor Innovate Tech는 귀하의 데이터에 대한 무단 접근, 공개 또는 변경을 방지하기 위해 최첨단 보안 조치를 채택하고 있습니다.
         </p>
         <p>
           모든 데이터는 안전한 서버에 저장되며, 서비스 연속성과 신뢰성을 보장하기 위해 정기적으로 백업됩니다. 오직 허가된 인원만이 개인정보에 접근할 수 있으며, 당사의 모든 직원은 엄격한 기밀 유지 의무를 준수합니다.
@@ -126,7 +126,7 @@
               <img src="files/logo.png" alt="로고" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © Decor Innivate Tech 2025<span class="text-slate-500"> - </span>모든 권리 보유.
+              © Decor Innovate Tech 2025<span class="text-slate-500"> - </span>모든 권리 보유.
               <br /><br />
             </div>
             <div class="text-sm text-slate-300">
