--- a/kr/terms.html
+++ b/kr/terms.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>이용 약관 | Decor Innivate Tech</title>
+  <title>이용 약관 | Decor Innovate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -65,7 +65,7 @@
           이용 약관
         </h1>
         <p class="text-lg md:text-xl text-slate-300">
-          Decor Innivate Tech에 오신 것을 환영합니다. 본 이용 약관은 당사 서비스 이용 및 플랫폼 접속에 적용되는 규정을 설명합니다. 당사 서비스를 이용함으로써 귀하는 본 약관을 준수하는 데 동의하는 것으로 간주되며, 이는 고객과 당사를 모두 보호하기 위해 마련되었습니다.
+          Decor Innovate Tech에 오신 것을 환영합니다. 본 이용 약관은 당사 서비스 이용 및 플랫폼 접속에 적용되는 규정을 설명합니다. 당사 서비스를 이용함으로써 귀하는 본 약관을 준수하는 데 동의하는 것으로 간주되며, 이는 고객과 당사를 모두 보호하기 위해 마련되었습니다.
         </p>
       </div>
     </section>
@@ -77,7 +77,7 @@
           서비스 이용
         </h2>
         <p>
-          Decor Innivate Tech 플랫폼에 대한 접근 및 사용은 본 약관에 따라 규율됩니다. 사용자는 서비스를 책임감 있게, 그리고 관련 법규에 따라 이용하기로 동의합니다. 당사 시스템의 무결성을 해칠 수 있는 사기성 사용이나 행위는 엄격히 금지됩니다. 당사 서비스는 운영 효율성과 고객 경험 향상을 위해 설계되었으므로, 남용이나 규정 미준수 시 즉각적인 계정 정지가 이루어질 수 있습니다.
+          Decor Innovate Tech 플랫폼에 대한 접근 및 사용은 본 약관에 따라 규율됩니다. 사용자는 서비스를 책임감 있게, 그리고 관련 법규에 따라 이용하기로 동의합니다. 당사 시스템의 무결성을 해칠 수 있는 사기성 사용이나 행위는 엄격히 금지됩니다. 당사 서비스는 운영 효율성과 고객 경험 향상을 위해 설계되었으므로, 남용이나 규정 미준수 시 즉각적인 계정 정지가 이루어질 수 있습니다.
         </p>
         <p>
           당사는 언제든지 본 약관을 수정 또는 업데이트할 권리를 보유하며, 웹사이트나 이메일을 통해 사용자에게 통지합니다. 변경 사항을 숙지하기 위해 사용자가 주기적으로 본 약관을 검토하는 것은 사용자의 책임입니다.
@@ -92,10 +92,10 @@
           제한 및 책임
         </h2>
         <p>
-          Decor Innivate Tech는 고품질의 서비스를 제공하기 위해 노력하지만, 제공되는 정보의 지속적인 가용성이나 절대적인 정확성을 보장하지는 않습니다. 당사는 부적절한 사용이나 서비스 중단으로 인한 손실 또는 손해에 대해 책임을 지지 않습니다. 사용자는 서비스 이용이 전적으로 본인의 책임임을 인정합니다.
+          Decor Innovate Tech는 고품질의 서비스를 제공하기 위해 노력하지만, 제공되는 정보의 지속적인 가용성이나 절대적인 정확성을 보장하지는 않습니다. 당사는 부적절한 사용이나 서비스 중단으로 인한 손실 또는 손해에 대해 책임을 지지 않습니다. 사용자는 서비스 이용이 전적으로 본인의 책임임을 인정합니다.
         </p>
         <p>
-          어떠한 경우에도 Decor Innivate Tech는 간접적, 부수적 또는 결과적 손해(데이터 손실이나 이익 손실 등을 포함하되 이에 국한되지 않음)에 대해 책임을 지지 않습니다. 여기서 명시된 제한 사항은 본 약관의 필수적인 부분이며, 법이 허용하는 최대 범위까지 적용됩니다.
+          어떠한 경우에도 Decor Innovate Tech는 간접적, 부수적 또는 결과적 손해(데이터 손실이나 이익 손실 등을 포함하되 이에 국한되지 않음)에 대해 책임을 지지 않습니다. 여기서 명시된 제한 사항은 본 약관의 필수적인 부분이며, 법이 허용하는 최대 범위까지 적용됩니다.
         </p>
       </div>
     </section>
@@ -110,7 +110,7 @@
           본 이용 약관은 언제든지 수정될 수 있으며, 웹사이트에 게시된 직후 효력을 발생합니다. 사용자가 본 섹션을 주기적으로 검토하여 변경 사항을 숙지하는 것은 사용자의 책임입니다.
         </p>
         <p>
-          본 약관은 Decor Innivate Tech의 본사가 위치한 국가의 법률에 따라 규율되고 해석되며, 법률 충돌 조항은 적용되지 않습니다. 당사 서비스 이용으로 발생하는 모든 분쟁은 중재 또는 필요시 적절한 관할 구역에서 해결됩니다.
+          본 약관은 Decor Innovate Tech의 본사가 위치한 국가의 법률에 따라 규율되고 해석되며, 법률 충돌 조항은 적용되지 않습니다. 당사 서비스 이용으로 발생하는 모든 분쟁은 중재 또는 필요시 적절한 관할 구역에서 해결됩니다.
         </p>
       </div>
     </section>
@@ -126,7 +126,7 @@
               <img src="files/logo.png" alt="로고" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © Decor Innivate Tech 2025<span class="text-slate-500"> - </span>모든 권리 보유.
+              © Decor Innovate Tech 2025<span class="text-slate-500"> - </span>모든 권리 보유.
               <br /><br />
             </div>
             <div class="text-sm text-slate-300">
