--- a/nl/contact.html
+++ b/nl/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Neem Contact Op | Decor Innivate Tech</title>
+  <title>Neem Contact Op | Decor Innovate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -65,7 +65,7 @@
           Neem Contact Op
         </h1>
         <p class="text-lg md:text-xl text-slate-300">
-          Bij Decor Innivate Tech staan we klaar om uw vragen, opmerkingen of verzoeken te ontvangen. Vul het onderstaande formulier in en wij nemen zo snel mogelijk contact met u op.
+          Bij Decor Innovate Tech staan we klaar om uw vragen, opmerkingen of verzoeken te ontvangen. Vul het onderstaande formulier in en wij nemen zo snel mogelijk contact met u op.
         </p>
       </div>
       <!-- Contact Form -->
@@ -111,7 +111,7 @@
               <img src="files/logo.png" alt="Logo" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © Decor Innivate Tech 2025<span class="text-slate-500"> - </span>Alle rechten voorbehouden.
+              © Decor Innovate Tech 2025<span class="text-slate-500"> - </span>Alle rechten voorbehouden.
               <br /><br />
             </div>
             <div class="text-sm text-slate-300">
