--- a/nl/privacy.html
+++ b/nl/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Privacybeleid | Decor Innivate Tech</title>
+  <title>Privacybeleid | Decor Innovate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -65,7 +65,7 @@
           Privacybeleid
         </h1>
         <p class="text-lg md:text-xl text-slate-300">
-          Bij Decor Innivate Tech hechten we veel waarde aan uw privacy en zetten we ons in voor de bescherming van uw persoonlijke gegevens. Dit privacybeleid legt uit hoe wij informatie van onze gebruikers verzamelen, gebruiken en beveiligen.
+          Bij Decor Innovate Tech hechten we veel waarde aan uw privacy en zetten we ons in voor de bescherming van uw persoonlijke gegevens. Dit privacybeleid legt uit hoe wij informatie van onze gebruikers verzamelen, gebruiken en beveiligen.
         </p>
       </div>
     </section>
@@ -92,7 +92,7 @@
           Gebruik en Bescherming van Gegevens
         </h2>
         <p>
-          De verzamelde informatie wordt gebruikt voor het verwerken van transacties, het beheren van accounts en het verzenden van updates en belangrijke meldingen. Bij Decor Innivate Tech hanteren wij geavanceerde beveiligingsmaatregelen om ongeautoriseerde toegang, openbaarmaking of wijziging van uw gegevens te voorkomen.
+          De verzamelde informatie wordt gebruikt voor het verwerken van transacties, het beheren van accounts en het verzenden van updates en belangrijke meldingen. Bij Decor Innovate Tech hanteren wij geavanceerde beveiligingsmaatregelen om ongeautoriseerde toegang, openbaarmaking of wijziging van uw gegevens te voorkomen.
         </p>
         <p>
           Alle gegevens worden opgeslagen op beveiligde servers en er worden regelmatig back-ups gemaakt om continuïteit en betrouwbaarheid van de dienst te waarborgen. Alleen geautoriseerd personeel heeft toegang tot persoonlijke informatie, en al onze medewerkers zijn gebonden aan strikte geheimhoudingsplicht.
@@ -126,7 +126,7 @@
               <img src="files/logo.png" alt="Logo" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © Decor Innivate Tech 2025<span class="text-slate-500"> - </span>Alle rechten voorbehouden.
+              © Decor Innovate Tech 2025<span class="text-slate-500"> - </span>Alle rechten voorbehouden.
               <br /><br />
             </div>
             <div class="text-sm text-slate-300">
