--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Términos y Condiciones | Decor Innivate Tech</title>
+  <title>Términos y Condiciones | Decor Innovate Tech</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/png" href="files/logo.png" sizes="16x16">
@@ -65,7 +65,7 @@
           Términos y Condiciones
         </h1>
         <p class="text-lg md:text-xl text-slate-300">
-          Bienvenido a Decor Innivate Tech. Estos términos y condiciones describen las reglas para el uso de nuestros servicios y el acceso a nuestra plataforma. Al utilizar nuestros servicios, aceptas cumplir con estas condiciones, las cuales están diseñadas para proteger tanto a nuestros clientes como a nosotros.
+          Bienvenido a Decor Innovate Tech. Estos términos y condiciones describen las reglas para el uso de nuestros servicios y el acceso a nuestra plataforma. Al utilizar nuestros servicios, aceptas cumplir con estas condiciones, las cuales están diseñadas para proteger tanto a nuestros clientes como a nosotros.
         </p>
       </div>
     </section>
@@ -77,7 +77,7 @@
           Uso del Servicio
         </h2>
         <p>
-          El acceso y uso de la plataforma de Decor Innivate Tech se rigen por estos términos. El usuario se compromete a utilizar el servicio de manera responsable y de acuerdo con las leyes aplicables. Se prohíbe cualquier uso fraudulento o acciones que puedan dañar la integridad de nuestro sistema. Nuestros servicios están diseñados para mejorar la eficiencia operativa y la experiencia del cliente; por ello, cualquier abuso o incumplimiento podrá resultar en la suspensión inmediata de la cuenta.
+          El acceso y uso de la plataforma de Decor Innovate Tech se rigen por estos términos. El usuario se compromete a utilizar el servicio de manera responsable y de acuerdo con las leyes aplicables. Se prohíbe cualquier uso fraudulento o acciones que puedan dañar la integridad de nuestro sistema. Nuestros servicios están diseñados para mejorar la eficiencia operativa y la experiencia del cliente; por ello, cualquier abuso o incumplimiento podrá resultar en la suspensión inmediata de la cuenta.
         </p>
         <p>
           Nos reservamos el derecho de modificar o actualizar estos términos en cualquier momento, notificando a los usuarios a través de nuestro sitio web o por correo electrónico. Es responsabilidad del usuario revisar periódicamente estos términos para estar informado de cualquier cambio.
@@ -92,10 +92,10 @@
           Limitaciones y Responsabilidad
         </h2>
         <p>
-          Decor Innivate Tech se esfuerza por proporcionar servicios de alta calidad; sin embargo, no garantizamos la disponibilidad continua o la precisión absoluta de la información proporcionada. La empresa no se hará responsable de las pérdidas o daños que surjan del uso indebido o de interrupciones en el servicio. El usuario acepta que el uso del servicio se realiza bajo su propio riesgo.
+          Decor Innovate Tech se esfuerza por proporcionar servicios de alta calidad; sin embargo, no garantizamos la disponibilidad continua o la precisión absoluta de la información proporcionada. La empresa no se hará responsable de las pérdidas o daños que surjan del uso indebido o de interrupciones en el servicio. El usuario acepta que el uso del servicio se realiza bajo su propio riesgo.
         </p>
         <p>
-          En ningún caso Decor Innivate Tech será responsable por daños indirectos, incidentales o consecuentes, incluidos, entre otros, la pérdida de datos o la pérdida de beneficios. Las limitaciones aquí expuestas son parte integral de estos términos y se aplican en la máxima medida permitida por la ley.
+          En ningún caso Decor Innovate Tech será responsable por daños indirectos, incidentales o consecuentes, incluidos, entre otros, la pérdida de datos o la pérdida de beneficios. Las limitaciones aquí expuestas son parte integral de estos términos y se aplican en la máxima medida permitida por la ley.
         </p>
       </div>
     </section>
@@ -110,7 +110,7 @@
           Estos términos y condiciones pueden ser modificados en cualquier momento, entrando en vigor inmediatamente después de su publicación en nuestro sitio web. Es responsabilidad del usuario revisar periódicamente esta sección para estar informado de cualquier cambio.
         </p>
         <p>
-          Estos términos se regirán e interpretarán de acuerdo con las leyes del país en el que se encuentra la sede de Decor Innivate Tech, sin tener en cuenta sus disposiciones sobre conflictos de leyes. Cualquier disputa que surja del uso de nuestros servicios se resolverá mediante arbitraje o, si es necesario, en las jurisdicciones competentes.
+          Estos términos se regirán e interpretarán de acuerdo con las leyes del país en el que se encuentra la sede de Decor Innovate Tech, sin tener en cuenta sus disposiciones sobre conflictos de leyes. Cualquier disputa que surja del uso de nuestros servicios se resolverá mediante arbitraje o, si es necesario, en las jurisdicciones competentes.
         </p>
       </div>
     </section>
@@ -126,7 +126,7 @@
               <img src="files/logo.png" alt="Logo" width="184" height="32" class="max-w-none h-16" />
             </a>
             <div class="text-sm text-slate-300">
-              © Decor Innivate Tech 2025<span class="text-slate-500"> - </span>Todos los derechos reservados.
+              © Decor Innovate Tech 2025<span class="text-slate-500"> - </span>Todos los derechos reservados.
               <br /><br />
             </div>
             <div class="text-sm text-slate-300">
